# shmdos64

./: .gitignore  AUTHORS  CMakeLists.txt  COPYING  README.md
acpi/: AcpiInit.cpp  AcpiInit.h  AcpiOsFunc.cpp  CMakeLists.txt  PciIrqRouting.cpp  PciIrqRouting.h  main.cpp
binary/efi/boot/: bootx64.efi
binary/sys64/: config.sys
include/: AbstractDevice.h  AbstractDriver.h  ContainerAllocator.h  InterruptQueue.h  IoResource.h  KernelModule.h  LockFreeRingBuffer.h  MemoryType.h  PciDevice.h  ThreadPool.h  VirtualMemoryManager.h  common_lib.h  common_types.h  conout.h  cpu.h  kalgorithm.h  kchrono.h  kclib.h  kcondition_variable.h  kernel_export.h  kernel_params.h  kevent.h  klist.h  klocale.h  klock_guard.h  kmemory.h  kmutex.h  ksem.h  kshared_mutex.h  kspin_lock.h  kstring.h  kthread.h  kunordered_map.h  kvector.h  pci.h  pe64.h  power.h  vmem_utils.h
kernel/: AbstractDevice.cpp  AbstractDevice_p.h  AbstractDriver.cpp  AbstractDriver_p.h  AbstractModule.h  AbstractTimer.cpp  AbstractTimer.h  AcpiTables.cpp  AcpiTables.h  BootVideo.cpp  BootVideo.h  CLibImpl.cpp  CmakeLists.txt  EventObject.cpp  EventObject.h  ExceptionHandlers.cpp  ExceptionHandlers.h  ExternalInterrupts.cpp  ExternalInterrupts.h  Heap.cpp  Heap.h  Hpet.cpp  Hpet.h  InterruptQueue.cpp  InterruptQueuePool.cpp  InterruptQueuePool.h  InterruptQueuePrivate.h  IoResourceImpl.h  IoResourceimpl.cpp  KernelModule.cpp  KernelPower.h  LocalApic.cpp  LocalApic.h  PeLoader.cpp  PeLoader.h  Process.cpp  Process.h  Semaphore.cpp  Semaphore.h  SmpBoot.cpp  (+40 more)
kernel/nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.xml
kernel/nbproject/private/: private.xml
moduleinit/: CMakeLists.txt  moduleinit.cpp
moduleinit/nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.xml
pci/: CMakeLists.txt  IrqRouting.cpp  PciLegacy.cpp  PciLegacy.h  PciRoot.cpp  PciRoot.h  main.cpp
pci/nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.xml
pcidev/: CMakeLists.txt  PciBus.cpp  PciBus.h  PciDevice.cpp  main.cpp
test/: main.cpp  test.cpp  test.h
test/nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml
test/nbproject/private/: configurations.xml  private.xml
uefi/: BootIo.cpp  BootIo.h  CMakeLists.txt  KernelLoader.cpp  KernelLoader.h  UefiVideo.cpp  UefiVideo.h  config.cpp  config.h  conout.cpp  cpu.cpp  efi.h  entry.cpp  main.cpp  memory.cpp  memory.h  new.cpp  paging.cpp  paging.h  panic.cpp  panic.h
uefi/nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.xml
